--- a/nifi-simulator-bundle-nar/pom.xml
+++ b/nifi-simulator-bundle-nar/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.hashmap</groupId>
         <artifactId>simulator-bundle</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.4.0</version>
     </parent>
 
     <artifactId>nifi-simulator-bundle-nar</artifactId>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.hashmap</groupId>
             <artifactId>nifi-simulator-bundle-processors</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
     </dependencies>
 
