--- a/nifi-simulator-bundle-processors/pom.xml
+++ b/nifi-simulator-bundle-processors/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.hashmap</groupId>
         <artifactId>simulator-bundle</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.4.0</version>
     </parent>
 
     <artifactId>nifi-simulator-bundle-processors</artifactId>
